@@ -2,6 +2,8 @@ package com.dsavisualizer.config;
 
 import com.dsavisualizer.security.JwtAuthenticationFilter;
 import com.dsavisualizer.security.JwtUtil;
+
+import java.util.Arrays;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -81,14 +83,11 @@ public class SecurityConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
+        String frontendUrl = System.getenv("FRONTEND_URL");
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of(
+        configuration.setAllowedOriginPatterns(Arrays.asList(
                 "http://localhost:5173",
-                "https://data-structure-viz.vercel.app",
-                "https://data-structure-1ut3hpkrm-abhihari010s-projects.vercel.app",
-                "https://data-structure-70ina8vy3-abhihari010s-projects.vercel.app"
-
-        ));
+                frontendUrl));
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
